test_suite5/ALAN/test_suite/alan-2022-examples/failing/002640_mutation.alan
source D4 begin S := boolean 58 end
